# wifi-monitor

./: .gitignore  ALL_FEATURES_SUMMARY.txt  CHANGELOG.md  CMakeLists.txt  COPY_FEATURE_GUIDE.md  CROSS_PLATFORM_UPDATE.md  DEPLOYMENT_SUCCESS.txt  DEPLOYMENT_UPDATE.txt  DEVICE_RENAMING_GUIDE.txt  ENABLE_FULL_ACCESS.md  ENABLE_REMOTE_ACCESS_GUIDE.txt  FEATURES_SUMMARY.txt  FINAL_SOLUTION_OPTIONS.txt  FIXED_NO_CPP_NEEDED.md  GITHUB_UPDATE_COMPLETE.txt  HOW_TO_USE.txt  HYBRID_SOLUTION_README.txt  INSTALLATION_COMPLETE.txt  LICENSE  LINUX_READY.md  MITM_BROWSER_MONITOR_README.md  MITM_INSTALLATION_COMPLETE.txt  MITM_SCANNER_README.md  MITM_TRAFFIC_MONITOR_UPDATE.txt  NetWatchPro.spec  PERSISTENT_NAMING_COMPLETE.txt  QUICK_REFERENCE.md  QUICK_START.txt  QUICK_START_MITM.txt  QUICK_START_MITM_TRAFFIC.txt  QUICK_START_ROUTER.txt  README.md  README_DEPLOYMENT.md  README_GUI.txt  REORGANIZATION_SUMMARY.md  ROUTER_MANAGER_README.md  RUN_SCRIPT_GUIDE.md  STARTUP_TEST_INFO.txt  START_HERE.md  START_HERE.txt  (+60 more)
assets/: NetWatchPro.desktop  NetWatchPro.manifest
docs/: BLOCKING_STATUS.md  LINUX_SETUP.md  PLATFORM_SUPPORT.md  README.md  README_DESKTOP_SHORTCUTS.md  WHY_BLOCKING_DOESNT_WORK.md
note/: MITM.txt  cpp.txt
scripts/: README.md  launch_wifi_monitor.bat  launch_wifi_monitor.sh  launch_wifi_monitor_admin.bat  launch_wifi_monitor_admin.sh  run_gui_as_admin.bat  run_gui_as_admin.sh  run_mitm_scan.sh  setup_mitm_scanner.sh
src/: __init__.py
src/gui/: hybrid_router_gui.py
src/scanners/: __init__.py  complete_device_discovery.py  mdns_ssdp_discovery.py  mitm_passive_scanner.py  (+1 more)
(+1 files in other folders)
